TheMightyDude (07 May 2008)
--------------------------------------
Fixed an exploit in bounty.php where anyone can inject SQL into th bounty system to gain credits on ship.

TheMightyDude (26 Apr 2008)
--------------------------------------
Fixed an exploit in news.php where anyone can inject SQL into startdate to display all players passwords etc.

TheMightyDude (24 Apr 2008)
--------------------------------------
Fixed the players log when displaying Apocalypse [SPACE_PLAGUE] so it now displays the percentage.

TheMightyDude (05 Apr 2008)
--------------------------------------
Fixed bug in planet2.php where you add a -value for colonists and it set it to 0 instead of flipping it.
Was:
    $transfer_colonists = -1 * $transfer_colonistst;
Should of been:
    $transfer_colonists = -1 * $transfer_colonists;

TheMightyDude (08 Feb 2008)
--------------------------------------
Fixed an exploit where you can modify fields of your own planet to have very high amounts of credits, colonists ore etc. 

TheMightyDude (26 Oct 2007)
--------------------------------------
[834641] building base doesn't check turns. (fixed)

TheMightyDude (17 Aug 2007)
--------------------------------------
Fixed movment into non valid extra sectors.

TheMightyDude (17 Aug 2007)
--------------------------------------
Fixed admin new2 for the $HTTP_POST_VARS issues.

TheMightyDude (17 Aug 2007)
--------------------------------------
Fixed Collect Credits from Planets.
This was down to using old $HTTP_POST_VARS insted of the new $_POST

TheMightyDude (09 Jan 2007)
--------------------------------------
Fixed bug in combat.php where planetfighters was set to 0 before the calculation.
Seems like there was two lines causing this problem :(

TheMightyDude (29 Dec 2006)
--------------------------------------
Fixed bug in combat.php where the planets energy wouldn't go down with the use of their beams.
Fixed bug in combat.php where planetfighters was set to 0 before the calculation.
